Fix the top navigation overflow (see #1302)
Description
-----------

Fixes #997

Commits
-------

f256ecc8 Fix the top navigation overflow (see #997)

--- a/core-bundle/src/Resources/contao/themes/flexible/src/main.css
+++ b/core-bundle/src/Resources/contao/themes/flexible/src/main.css
@@ -1792,6 +1792,7 @@ fieldset.collapsed > legend {
 	#container {
 		display:block;
 		padding-top:40px;
+		overflow:hidden;
 	}
 	#main,#left {
 		float:none;
